# boat_detection

./: README.md
C++_part/: BoatDetector.cpp  BoatDetector.h  CMakeLists.txt  PreProcessor.cpp  PreProcessor.h  main.cpp  requirements.txt
Python/: json_checker.py
Python/old/: boat_detection.ipynb  boat_detection.py
